--- a/index.html
+++ b/index.html
@@ -19,85 +19,86 @@
             keeper
         </div>
         <div class="title">
-            Расчет дневного бюджета
+            Daily budget calculation
         </div>
         <div class="main">
             <div class="data">
-                <input class="type-budget" type="text" placeholder="Ваш бюджет">
+                <input class="type-budget" type="text" placeholder="Your budget">
                 <input type="text" name="date" class="tcal type-data" value="" />
 
-                <div class="choose-expenses">Введите обязательные расходы</div>
+                <div class="choose-expenses">
+                    Enter required expenses</div>
                 <button class="dobavit-umensh green-dob">+</button>
                 <button class="dobavit-umensh red-umen">-</button><br><br>
                 <div class="dopol-polya">
-                    <input class="expenses-item" type="text" id="expenses_1" placeholder="Наименование">
-                    <input class="expenses-item" type="text" id="expenses_2" placeholder="Цена">
-                    <input class="expenses-item" type="text" id="expenses_3" placeholder="Наименование">
-                    <input class="expenses-item" type="text" id="expenses_4" placeholder="Цена">
+                    <input class="expenses-item" type="text" id="expenses_1" placeholder="Name">
+                    <input class="expenses-item" type="text" id="expenses_2" placeholder="Price">
+                    <input class="expenses-item" type="text" id="expenses_3" placeholder="Name">
+                    <input class="expenses-item" type="text" id="expenses_4" placeholder="Price">
                 </div>
-                <button class="expenses-item-btn">Утвердить</button>
+                <button class="expenses-item-btn">Confirm</button>
 
-                <div class="optionalexpenses">Введите необязательные расходы</div>
+                <div class="optionalexpenses">Enter optional expenses</div>
                 <input class="optionalexpenses-item" type="text" id="optionalexpenses_1">
                 <input class="optionalexpenses-item" type="text" id="optionalexpenses_2">
                 <input class="optionalexpenses-item" type="text" id="optionalexpenses_3">
-                <button class="optionalexpenses-btn">Утвердить</button>
+                <button class="optionalexpenses-btn">Confirm</button>
 
-                <div class="count-budget">Расчет дневного бюджета</div>
-                <button class="count-budget-btn">Рассчитать</button>
+                <div class="count-budget">Daily budget calculation</div>
+                <button class="count-budget-btn">Сalculate</button>
 
-                <div class="choose-income-label">Введите статьи возможного дохода через запятую</div>
+                <div class="choose-income-label"> Enter items of possible income separated by commas</div>
                 <input class="choose-income" type="text" id="income">
 
-                <div class="checksavings">Есть ли накопления:
+                <div class="checksavings">Money accumulation:
                     <input id="savings" type="checkbox">
                 </div>
-                <label for="sum">Сумма</label>
+                <label for="sum">Amount</label>
                 <input class="choose-sum" id="sum" type="text"><br>
-                <label for="percent">Процент (без знака %)</label>
+                <label for="percent">Percent (without %)</label>
                 <input class="choose-percent" id="percent" type="text">
 
                 <div class="open">
-                    <button class="start" id="start">Начать расчет</button>
+                    <button class="start" id="start">Start calculation</button>
                 </div>
             </div>
             <div class="result">
                 <div class="result-table">
-                    <div class="budget">Бюджет: </div>
+                    <div class="budget">Budget: </div>
                     <div class="budget-value"></div>
 
-                    <div class="daybudget">Бюджет на 1 день: </div>
+                    <div class="daybudget">Daily budget: </div>
                     <div class="daybudget-value"></div>
 
-                    <div class="level">Уровень дохода: </div>
+                    <div class="level">Income level: </div>
                     <div class="level-value"></div>
 
-                    <div class="expenses">Обязательные расходы: </div>
+                    <div class="expenses">Required expenses: </div>
                     <div class="expenses-value"></div>
 
-                    <div class="optionalexpenses">Возможные траты: </div>
+                    <div class="optionalexpenses">Optional expenses: </div>
                     <div class="optionalexpenses-value"></div>
 
-                    <div class="income">Дополнительный доход: </div>
+                    <div class="income">Additional income: </div>
                     <div class="income-value"></div>
 
-                    <div class="monthsavings">Накопления за 1 месяц:</div>
+                    <div class="monthsavings">Savings for 1 month:</div>
                     <div class="monthsavings-value"></div>
 
-                    <div class="yearsavings">Накопления за 1 год:</div>
+                    <div class="yearsavings">Savings for 1 year:</div>
                     <div class="yearsavings-value"></div>
                 </div>
                 <div class="time-data">
                     <div class="day">
-                        День:
+                        Day:
                         <input class="day-value" type="text" readonly>
                     </div>
                     <div class="month">
-                        Месяц:
+                        Month:
                         <input class="month-value" type="text" readonly>
                     </div>
                     <div class="year">
-                        Год:
+                        Year:
                         <input class="year-value" type="text" readonly>
                     </div>
                 </div>
